# wan2gp_rest_api_plugin

./: .gitignore  Makefile  README.md  __init__.py  callbacks.py  job_store.py  plugin.py  plugin_info.json  pyproject.toml  rest_server.py  schemas.py  uploads.py
postman_collections/: wan2gp_rest_api.json
tests/: __init__.py  test_job_store.py  test_uploads.py
